--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -14,7 +14,7 @@
             (click)="drawer.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-        <h1 class="tittle">CESET</h1>
+        <h1 class="tittle pointer" (click)="goToStart()" [hidden]="drawer.opened">EduconCESET</h1>
         <button class="notification" (click)="toggleNotification()" mat-icon-button><mat-icon>notifications</mat-icon></button>
         <button class="logout" (click)="this.loginService.logout()" mat-raised-button>Cerrar Sesión</button>
     </mat-toolbar>
@@ -31,7 +31,7 @@
             [mode]="mobileQuery.matches ? 'over' : 'side'"
             [fixedInViewport]="mobileQuery.matches"
             fixedTopGap="56">
-            <mat-toolbar class="toolbar" color="primary">Menu</mat-toolbar>
+            <mat-toolbar class="toolbar pointer" (click)="goToStart(drawer)" color="primary">EduconCESET</mat-toolbar>
             <mat-nav-list>
                 <a mat-list-item [ngClass]="{'selected' : this.router.url === '/inicio/actividades'}" [routerLink]="['actividades']" (click)="drawer.toggle()">Lista de Actividades</a>
                 <a mat-list-item [ngClass]="{'selected' : this.router.url === '/inicio/cohortes'}" [routerLink]="['cohortes']" (click)="drawer.toggle()">Lista de Cohortes</a>
@@ -42,7 +42,6 @@
         <mat-sidenav-content (click)="toggleDrawer(drawer)" id="content">
             <!-- Body -->
                 <router-outlet></router-outlet>
-                <input type="submit">
                 <app-footer (click)="getActivity()" [ngClass]="{ 'footer': !scrollShowed }"></app-footer>
             <!---->
         </mat-sidenav-content>
