--- a/src/app/componentes/activity-list/activity-list.component.html
+++ b/src/app/componentes/activity-list/activity-list.component.html
@@ -33,6 +33,12 @@
         <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
       </ng-container>
 
+      <!-- Date Column -->
+      <ng-container matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Creación </mat-header-cell>
+        <mat-cell *matCellDef="let row"> {{parseDate(row.creationDate)}} </mat-cell>
+      </ng-container>
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </mat-header-cell>
