Disabling entrar button

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -45,7 +45,8 @@
           mat-raised-button
           class="button"
           color="primary"
-          [title]="buttonInfo()">
+          [title]="buttonInfo()"
+          disabled="true">
             Entrar
         </button>
         <button
