--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -45,8 +45,7 @@
           mat-raised-button
           class="button"
           color="primary"
-          [title]="buttonInfo()"
-          disabled="true">
+          [title]="buttonInfo()">
             Entrar
         </button>
         <button
