--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -30,13 +30,25 @@
     .horizontal-center {
         margin-left: -3%;
     }
+    
+    .center {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        right: 50%;
+        transform: translateY(-50%) translateX(-50%);
+    }
 }
 
 @media(max-width: 600px) {
     .center {
-        margin: 5% auto;
+        position: absolute;
         width: 80%;
         min-width: 310px;
+        top: 50%;
+        left: 50%;
+        right: 50%;
+        transform: translateY(-50%) translateX(-50%);
     }
 }
 
