--- a/src/app/componentes/activity-detail/activity-detail.component.css
+++ b/src/app/componentes/activity-detail/activity-detail.component.css
@@ -8,13 +8,16 @@ input[type="file"] {
 }
 
 .controls-form > *, form > *, .button {
-    width: 100%;
-    margin-bottom: 10px;
+    width: 99%;
+    margin-bottom: 5px;
 }
 
 .pointer:hover {
     cursor: pointer;
-    color: gray !important;
+}
+
+.pointer:hover:not(.icon) {
+  color: gray !important;
 }
 
 .disabled {
@@ -28,5 +31,5 @@ input[type="file"] {
 
 .buttons > * {
   width: 49%;
-  margin-left: 0.5%
+  margin-left: 0.2%
 }
