--- a/src/app/componentes/budget-item/budget-item.component.css
+++ b/src/app/componentes/budget-item/budget-item.component.css
@@ -40,5 +40,14 @@
 }
 
 .full {
-    width: 100%;
+  margin-top: 5px;
+  width: 100%;
+}
+
+button.full {
+  width: 99%;
+}
+
+.full > button {
+  width: 49%;
 }
