--- a/src/app/componentes/budget/budget.component.html
+++ b/src/app/componentes/budget/budget.component.html
@@ -73,10 +73,13 @@
       </mat-expansion-panel>
   </mat-accordion>
   <br>
-  <div class="buttons">
-    <button mat-raised-button color="primary" (click)="showFinancialAnalysis()">Anal. Financiero</button>
-    <button mat-raised-button color="primary" (click)="showDiscount()">Descuentos</button>
-    <button mat-raised-button color="primary">Reporte</button>
-    <button mat-raised-button color="primary">Guardar</button>
+  <div class="full">
+    <button mat-raised-button color="primary" class="three" (click)="showFinancialAnalysis()">Análisis Financiero</button>
+    <button mat-raised-button color="primary" class="three" (click)="showDiscount()">Descuentos</button>
+    <button mat-raised-button color="primary" class="three">Reporte</button>
+  </div>
+  <div class="full">
+    <button mat-raised-button color="warn" class="two">Cancelar</button>
+    <button mat-raised-button color="primary" class="two">Guardar</button>
   </div>
 </mat-card>
