--- a/src/app/componentes/dialog-budget-item/dialog-budget-item.component.html
+++ b/src/app/componentes/dialog-budget-item/dialog-budget-item.component.html
@@ -11,7 +11,7 @@
         <mat-error *ngIf="form.controls['description'].hasError('required')">Holiwis</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="quantity" placeholder="Cantidad" type="number" required>
+        <input matInput (keyup)="quantityKeyUp()" (click)="quantityKeyUp()" formControlName="quantity" placeholder="Cantidad" type="number" required>
         <mat-error *ngIf="form.controls['quantity'].hasError('required')">Holiwis</mat-error>
       </mat-form-field>
       <mat-form-field>
@@ -24,24 +24,24 @@
         <mat-error *ngIf="form.controls['unity'].hasError('required')">Holiwis</mat-error>
       </mat-form-field>
       <mat-form-field *ngIf="this.timeNeeded">
-        <input matInput formControlName="time" placeholder="Tiempo" required>
+        <input matInput (keyup)="timeKeyUp()" (click)="timeKeyUp()" formControlName="time" placeholder="Tiempo" required>
         <mat-error *ngIf="form.controls['time'].hasError('required')"></mat-error>
       </mat-form-field>
       <mat-form-field *ngIf="this.dedicationNeeded">
-        <input matInput formControlName="dedication" class="right-align" placeholder="Dedicación (%)" type="number" required>
+        <input matInput (keyup)="dedicationKeyUp()" (click)="dedicationKeyUp()" formControlName="dedication" class="right-align" placeholder="Dedicación (%)" type="number" required>
         <span matSuffix>%</span>
         <mat-error *ngIf="form.controls['dedication'].hasError('required')"></mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="unityValue" placeholder="Valor Unitario" type="number" required>
+        <input matInput (keyup)="unityValueKeyUp()" (click)="unityValueKeyUp()" formControlName="unityValue" placeholder="Valor Unitario" type="number" required>
         <mat-error *ngIf="form.controls['unityValue'].hasError('required')"></mat-error>
       </mat-form-field>
       <div *ngIf="this.fpNeeded">
-        <p class="label">Valor Total sin FP</p><p class="value">$ 00000000</p>
-        <p class="label">FP</p><p class="value">1,6</p>
-        <p class="label">Valor Unitario con FP</p><p class="value">$ 00000000</p>
+        <p class="label">Valor Total sin FP</p><p class="value">{{parseMoney(currentExpenditure.totalWithoutFP)}}</p>
+        <p class="label">FP</p><p class="value">{{currentExpenditure.fp}}</p>
+        <p class="label">Valor Unitario con FP</p><p class="value">{{parseMoney(currentExpenditure.unityWithFP)}}</p>
       </div>
-      <p class="label"><b>Valor Total<div class="inline" *ngIf="this.fpNeeded"> con FP</div></b></p><p class="value"><b>$ 000</b></p>
+      <p class="label"><b>Valor Total<div class="inline" *ngIf="this.fpNeeded"> con FP</div></b></p><p class="value"><b>{{parseMoney(currentExpenditure.total)}}</b></p>
       <br><br>
       <mat-form-field>
         <textarea matInput formControlName="comment" placeholder="Observaciones" required></textarea>
