--- a/src/app/componentes/dialog-budget-item/dialog-budget-item.component.css
+++ b/src/app/componentes/dialog-budget-item/dialog-budget-item.component.css
@@ -7,6 +7,24 @@ input.right-align::-webkit-inner-spin-button {
     text-align: right;
 }
 
+.percent-icon {
+  transform: translateY(12px);
+  display: inline-block;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+.buttons {
+  width: 48%;
+  margin-left: 1%;
+}
+
+.button {
+  width: 100%;
+}
+
 * {
   width: 100%;
   overflow-y: hidden;
