--- a/src/app/componentes/budget-item/budget-item.component.css
+++ b/src/app/componentes/budget-item/budget-item.component.css
@@ -9,12 +9,6 @@
     }
 }
 
-.cell {
-    padding-top: 5px;
-    vertical-align: middle;
-    height: 50px;
-}
-
 .item:hover {
     cursor: pointer;
     background: #F5F5F5;
@@ -30,7 +24,8 @@
 }
 
 .table {
-  padding: 10px 20px 80px 20px;
+  padding: 10px 20px 25px 10px;
+  margin-bottom: 25px;
 }
 
 .add-button {
@@ -45,9 +40,11 @@
 }
 
 button.full {
-  width: 99%;
+  width: 98%;
+  margin-left: 1%;
 }
 
 .full > button {
-  width: 49%;
+  width: 48%;
+  margin-left: 1%;
 }
