Finish with budget item

--- a/src/app/componentes/budget-item/budget-item.component.html
+++ b/src/app/componentes/budget-item/budget-item.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
   </div>
 
-  <mat-card class="table" *ngIf="this.activityService.activity.budget.items[this.itemControl.value].expenditures">
+  <mat-card class="table" *ngIf="canShow()">
     <mat-table #table [dataSource]="budgetItemDataSource">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
