Settin up serverless

--- a/src/app/componentes/budget/budget.component.html
+++ b/src/app/componentes/budget/budget.component.html
@@ -73,7 +73,7 @@
       </mat-expansion-panel>
   </mat-accordion>
   <br>
-  <div class="full">
+  <div class="full" *ngIf="false">
     <button mat-raised-button color="primary" class="three" (click)="showFinancialAnalysis()">Análisis Financiero</button>
     <button mat-raised-button color="primary" class="three" (click)="showDiscount()">Descuentos</button>
     <button mat-raised-button color="primary" class="three" *ngIf="false">Reporte</button>
